# corpus-te

./: .env.example  .gitignore  CELERY_IMPLEMENTATION_SUMMARY.md  DATABASE_PERSISTENCE_GUIDE.md  Dockerfile  Dockerfile.init  HETZNER_DEPLOYMENT_GUIDE.md  HETZNER_STORAGE_GUIDE.md  POSTGRESQL_MIGRATION.md  POSTGRESQL_SETUP.md  RBAC_OPTIMIZATION_SUMMARY.md  README.md  alembic.ini  backfill_duration.py  celery_beat.py  celery_worker.py  check-ports.sh  cleanup_storage.py  code-sample  create_test_data.py  demo_rbac_optimization.py  deploy.sh  docker-compose.prod.yml  docker-compose.simple.yml  docker-compose.yml  example_hetzner_storage.py  init_db.py  main.py  manage_database.py  manage_user_roles.py  models.py  prepare-deployment.sh  pyproject.toml  requirements.txt  schemas.py  setup-server.sh  setup_postgresql.py  test_celery_comprehensive.py  test_celery_integration.py  test_celery_pytest.py  (+6 more)
alembic/: env.py
alembic/versions/: 068a6f844edc_add_postgis_location_field.py  f3ec710ef1cd_add_otp_table.py  (+7 more)
app/: main.py
docs/: CELERY_GUIDE.md  DEPLOYMENT_GUIDE.md  OTP_AUTHENTICATION_GUIDE.md  OTP_IMPLEMENTATION_SUMMARY.md  OTP_TESTING_RESULTS.md  POSTGIS_INTEGRATION_SUMMARY.md  Plan.md  RBAC_GUIDE.md  RECORD_FILE_GENERATOR_COMPLETION_SUMMARY.md  RECORD_FILE_GENERATOR_GUIDE.md  demo_rbac_optimization.py  example_hetzner_storage.py  example_record_file_generator.py  generate_record_files.py  otp_demo.py
tests/: create_test_data.py  test_hetzner_storage.py  test_otp_api.py  test_postgis_api.py  test_postgis_integration.py  test_updated_api_endpoints.py  verify_test_data.py
(+45 files in other folders)
