[project]
name = "corpus-te"
version = "0.1.0"
description = "Telugu corpus collections backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "psycopg2-binary",
    "pydantic-settings",
    "alembic",
    "minio",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-multipart",
    "celery",
    "python-dotenv",
    "email-validator"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "black",
    "isort",
    "flake8"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
